# autonomous-characters

./: .dockerignore  Cargo.toml  Dockerfile  README.md  index.html  web.sh
src/: character.rs  debug.rs  main.rs  target.rs  vehicle.rs  world.rs
web/: styles.css
