[package]
name = "autonomous-characters"
version = "1.0.0"
authors = ["Martin Domajnko <https://github.com/martines3000>"]
exclude = ["dist", "build", "assets", "credits"]
edition = "2021"
rust-version = "1.67.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1" }
bevy_prototype_lyon = "0.7.2"
rand = "0.8.5"
bevy-inspector-egui = "0.14.0"
